--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="4;url=https://halloween-x5i0.onrender.com">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Todays Tips</title>
     <style>
@@ -16,7 +17,7 @@
     </style>
 </head>
 <body>
-    <iframe src="https://script.google.com/macros/s/AKfycbw0V1DIXGp6kvt5p2q-pqGZfHFiJ3CON7CseCr6VZoQ21buAFObL3bdyMsfKBZoFAq7/exec" title="description"
-    style="border: 0; width: 100%; height: 100vh; overflow: auto;" ></iframe>
+<!--     <iframe src="https://script.google.com/macros/s/AKfycbw0V1DIXGp6kvt5p2q-pqGZfHFiJ3CON7CseCr6VZoQ21buAFObL3bdyMsfKBZoFAq7/exec" title="description"
+    style="border: 0; width: 100%; height: 100vh; overflow: auto;" ></iframe> -->
 </body>
 </html>
